--- a/style.css
+++ b/style.css
@@ -17,8 +17,34 @@ header{
     display:flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 10%;
+    padding: 10px 10% 0px;
     background-color: white;
+}
+.header2{
+    position:fixed;
+    width:100%;
+    top: 75px;
+    padding-bottom: 10px;
+    z-index:1000;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color:#1c7a20;
+}
+.categories a {
+    color: #f0eaea;
+    font-weight: 300;
+    padding-right: 20px;
+    padding-left: 20px;
+    
+    
+}
+.categories{
+    display:flex;
+
+}
+.pactive{
+    border: 1px solid white;
 }
 
 
@@ -43,7 +69,7 @@ header{
     font-size: 16px;
     text-transform: capitalize;
     padding:10px 20px;
-    font-weight: 400;
+    font-weight: 800;
     transition: all .42s ease;
 }
 
@@ -81,7 +107,7 @@ section{
 .main-home{
     width: 100%;
     height: 100vh;
-    background-image:url(bg.jpg);
+    background-image:url(photos/bg.jpg);
     background-position: center;
     background-size: cover;
     display: grid;
@@ -91,20 +117,22 @@ section{
 
 .main-text h5{
     color:#2c2c2c;
-    font-size: 30px;
+    font-size: 60px;
     text-transform: capitalize;
     font-weight: 500;
 }
 .main-text p{
     color:#333c56;
     font-size: 20px;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
-.main-text a{
+.main-button a{
     color:#333c56;
     font-size: 20px;
     border: solid 2px;
+
     padding: 10px;
     border-radius:30px;
 }
@@ -196,8 +224,12 @@ section{
     position:absolute;
     right:4px;
     font-size:20px;
+
 }
-.heart-icon:hover{
+.bx-heart{
+    color: #31d239;
+}
+.bx-heart:hover{
     color:#EE1C47;
 }
 
@@ -280,6 +312,7 @@ section{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(220px,auto));
     gap:1.5rem;
+    margin-bottom: 0px;
 }
 .product-box img{
     width:100%;
@@ -292,11 +325,12 @@ section{
 }
 .product-box:hover{
     border: 2px solid green;
-    padding: 10px;
+    margin:5px;
+    
 }
 .add-cart{
     position:absolute;
-    bottom:4px;
+    top:285px;
     right:4px;
     font-size: 25px;
 }
@@ -305,21 +339,100 @@ section{
     bottom:4px;
     right:4px;
     font-size: 25px;
+    color:#2d2f2d;
 }
 .add-cart:hover{
     color:green;
 }
 
-.box{
+.col{
+    margin-bottom: 30px;
+}
+.delivery{
+    padding:5%;
     border: 2px solid green;
-    padding-top: 10%;
+    margin:5%;
 }
 
-.container {
-    border:2px solid#204825;
+.settings{
+    padding: 10%;
+    text-align: center;
+}
+.settingstext{
+    margin:1%;
+}
+.click:hover{
+    background-color: #ccc6c6;
+}
+.as{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(160px,auto));
+
+    
+}
+.mycontainer{
+    display:flex;
+    align-items: center;
+}
+.picture{
+    padding:2%;
+}
+
+.secondcontainer{
+    display:flex;
+    justify-content: space-between;
+}
+.name{
+    font-size: 30px;
+}
+
+.thirdcontainer{
+    display:flex;
+    justify-content: space-between;
+}
+
+.myrow{
+    display:flex;
+}
+#col1{
+    border-right: 2px solid #204825;
+}
+
+    
+.hide {
+    display: none;
+  }
+  
+  .myDIV:hover + .hide {
+    display: block;
+    color: red;
+    z-index:1000;
+  }
+
+#gift{
+    background-image: url(photos/giftcard.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#getstarted{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 60px;
+    padding-bottom: 20px;
+
+}
+#texts{
+    padding-left:20px ;
+}
+label,.col-12,.form-text, {
+    padding:20px;
+}
+.mb-3{
     padding:20px;
 }
 
+#colom{
+    display: flex;
+}
 
 /* responsive-css */
 @media(max-width:890px){
@@ -332,20 +445,54 @@ section{
     }
 }
 
-
-
+#gc{
+    padding-top: 10%;
+}
+#color {
+    box-shadow: 0 0 20px 0px rgba(34, 121, 34, 0.619);
+}
+#space{
+    padding: 30px;
+}
+#passwordHelpBlock{
+    font-size: 10px;
+    color: #2c2c2c;
+}
 .navmenu li .active{
     color: #204825;
     font-weight: 700;
     border-bottom: 2px solid #204825;
 }
-#active {
-    color: #204825;
+.active {
+    color: #1c7a20;
     font-weight: 700;
-    border-bottom: 2px solid #204825;
+    border-bottom: 3px solid #204825;
 }
 
 
+
+.sb-logo-text {
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    font-weight: 900;
+    position: absolute;
+    right: 0;
+    font-size: 24px;
+    width: auto;
+    z-index: 10;
+    margin-top: 6rem;
+    text-align: right;
+    display: inline-block;
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+}
+
+@media (min-width: 992px){
+    .d-lg-inline-block {
+    display: inline-block!important;
+}}
 
 @media(max-width:750px){
     .navmenu{
@@ -385,5 +532,11 @@ section{
     }
     .box{
         padding-top:20px;
+    }
+}
+
+@media (max-width: 320px){
+    .brand{
+        width: 1px;
     }
 }
